methods.basics.Methods.scala.error
Erreur de compilation :
Methods:5: error: not found: value prendreBiscuit
  prendreBiscuit()
  ^