methods.basics.Methods.scala.code
def goAndGet() {
  while (estSurBiscuit == false){
    avance()
  }
  prendreBiscuit()
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}